<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/posterDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/titleDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Title"
                        android:textSize="32dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="rating"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:gravity="center"/>

                        <TextView
                            android:id="@+id/voteCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="votes"
                            android:textSize="20dp"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:layout_weight="1"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="10dp"
                android:background="@color/white"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/imageFieldDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/descriptionD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="description"
                    android:textColor="@color/black"
                    android:textSize="18dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mainData"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:text="@string/budget"/>

                    <TextView
                        android:id="@+id/budgetDetails"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/releaseDate"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/releaseDetails"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/genresDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="жанры"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/creditsDtails"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/moreOrMelee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/more"
                    android:background="@color/darkRed"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold"/>

                <ImageButton
                    android:id="@+id/statDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_star_24_off"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/review"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/username"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/contentReview"
                        android:textColor="@color/black"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/created"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"/>
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>